Cache method collection to speed up proces